restructured code for model